Review: Add immutable + testing

--- a/project/src/public/assets/css/main.css
+++ b/project/src/public/assets/css/main.css
@@ -3922,8 +3922,8 @@ input, select, textarea {
 		}
 
 
-//--------------------------------------------------------------------------
-// Portfolio CSS
+/*-------------------------------------------------------------------------*/
+/* Portfolio CSS */
 * {
   box-sizing: border-box;
 }
